# excel-parser

./: README.md  main.py  pyproject.toml
app/: config.py  llm.py  models.py  parser.py
static/: index.html
tests/: conftest.py  test_api.py  test_models.py  test_parser.py
